[package]
name = "holiday_de"
version = "0.0.1"
authors = ["Hannes Herrmann <hannes.herrmann@tngtech.com>"]
edition = "2018"
description = "Provides dates for public holidays in Germany since 1995"
license = "Apache-2.0/MIT"
readme = "README.md"
documentation = "https://docs.rs/holiday_de"

[dependencies]
chrono = "0.4"
computus = "1.0.0"


[dev-dependencies]
proptest = "0.9.1"
